# software-training

./: .gitignore  CMakeLists.txt  InstallBricktronics.sh  README.md  lejosPermission.sh
1-Basic-CPP/: CMakeLists.txt  output.cpp
2-Basic-Robotics/SensorDemo/: SensorDemo.ino
2-Basic-Robotics/UltrasonicDemo/: UltrasonicDemo.ino
2-Git-and-Sensors/demo_week2/: demo_week2.ino
2-TTTViewer/src/: MainFrame.java
2-TicTacToe-Starter/: .project
2-TicTacToe-Starter/src/base/: Board.java  CommLink.java  Game.java  Main.java  Robot.java
2-TicTacToe/src/base/: Board.java  CommLink.java  Game.java  Main.java  MoveGenerator.java  Point.java  RandomMoveGenerator.java  Robot.java
2015/: README.md
2015/3-Objects-and-Algorithm/demo_week3/: demo_week3.ino
2015/5-MazeBot/mazeBot/: BitMap.h  DifferentialDrive.cpp  DifferentialDrive.h
4-CPP-Intro/: 2-File-IO.cpp  4-ObjectsInMemory.cpp  5-Pointers.cpp
4-Serial-Comm/: CMakeLists.txt  comm-test.cpp
4-Serial-Comm/arduino_comm_test/: arduino_comm_test.ino
5-MazeBot/mazeBot/: BitMap.cpp  mazeBot.ino
exercise1/: 01-january.txt  02-february.txt  03-march.txt  04-april.txt  05-may.txt  06-june.txt  07-july.txt  08-august.txt  09-september.txt  10-october.txt  11-november.txt  12-december.txt
slides/: README.md
